# gitlab-mirror

./: .cursorrules  .gitignore  LICENSE  README.md  pyproject.toml
src/gitlab_mirror/: __init__.py  cli.py  config.py  git_operations.py  gitlab_api.py  logger.py  models.py  sync.py
tests/: __init__.py  conftest.py  test_config.py  test_git_operations.py  test_models.py  test_sync.py
